--- a/.github/workflows/dotnet-build-and-test-pipeline.yml
+++ b/.github/workflows/dotnet-build-and-test-pipeline.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
@@ -21,9 +21,13 @@ jobs:
         with:
           dotnet-version: 7.x.x
 
+      - name: Install required workloads
+        working-directory: ./MathLibrary
+        run: dotnet workload restore
+
       - name: Restore solution
         working-directory: ./MathLibrary
-        run : dotnet restore
+        run: dotnet restore
 
       - name: Build solution
         working-directory: ./MathLibrary
