Enable computation of expected remaining life-times (~20ms). * Add caller application for computing expected remaining life-times. * Implement simple parser for command line arguments. * Implement simple functionality for computing exact ages given a birth date. * Implement some logic for random variables (the most important one being the computation of the expectation). Move projects to a new directory.

--- a/Application/Functions/Functions.csproj
+++ b/Application/Functions/Functions.csproj
@@ -19,4 +19,8 @@
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="MathNet.Numerics" Version="5.0.0"/>
+    </ItemGroup>
+
 </Project>
